--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="container" id="container">
         <div class="images">
-            <img src="First pic.jpg" onclick="showText(this, 'This is my first memory!')">
+            <img src="images/first.jpg" onclick="showText(this, 'This is my first memory!')">
             <img src="First pic.jpg" onclick="showText(this, 'This is my second memory!')">
         </div>
 
@@ -124,3 +124,4 @@
 
 </body>
 </html>
+
