--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="container" id="container">
         <div class="images">
-            <img src="images/First pic.jpg" onclick="showText(this, 'This is my first memory!')">
+            <img src="images/First%pic.jpg" onclick="showText(this, 'This is my first memory!')">
             <img src="First pic.jpg" onclick="showText(this, 'This is my second memory!')">
         </div>
 
@@ -124,5 +124,6 @@
 
 </body>
 </html>
+
 
 
