--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
     <div class="container" id="container">
         <div class="images">
-            <img src="images/First.jpg" onclick="showText(this, 'say Hi to this little one. My first baby. so cutie patootie')">
-            <img src="First pic.jpg" onclick="showText(this, 'This is my second memory!')">
+            <img src="images/First.jpg" onclick="showText(this, 'say Hi to this little one. My first baby. so cutie patootie. yun lang hehehe. pili ka na ulit ng bagong picture masyado ka lang cute dito <3 ')">
+            <img src="images/Second.jpg" onclick="showText(this, 'Ito yung unang video call natin HAHAHAHA! nene and totoy days. Kitang kita mo naman siguro na sobrang napapangiti mo ako kapag nakikita kita. always remember na simula una palang ikaw ang dahilan ng ngiti ko')">
         </div>
 
         <div id="text"></div>
@@ -124,6 +124,7 @@
 
 </body>
 </html>
+
 
 
 
