--- a/index.html
+++ b/index.html
@@ -77,7 +77,22 @@
     <div class="container" id="container">
         <div class="images">
             <img src="images/First.jpg" onclick="showText(this, 'say Hi to this little one. My first baby. so cutie patootie. yun lang hehehe. pili ka na ulit ng bagong picture masyado ka lang cute dito <3 ')">
+            <img src="images/Christening.jpg" onclick="showText(this, 'Christening day ng baby kent natin ')">
+            <img src="images/Foundation.jpg" onclick="showText(this, 'Taraaaay! pang couple of the year lang ang kuha. HAHAHAHA')">
+            <img src="images/Grad.jpg" onclick="showText(this, 'One of the best milestone na nareach mo, Im so proud of you! ')">
+            <img src="images/KentBirth.jpg" onclick="showText(this, 'Your smile, so genuine na kahit pagod ka kakaire, you gave life to our angel. Thank you!')">
+            <img src="images/Marriage.jpg" onclick="showText(this, 'The moment you said..... YEEEES! rekta na agad sa huwes marriage!!!')">
+            <img src="images/family.jpg" onclick="showText(this, 'THE BULANHAGUI FAMILY! ang pamilya na tinanggap ako ng buong buo, thank you sa kanila kasi hinayaan nila akong mahalin ka palagi')">
+            <img src="images/firstouting.jpg" onclick="showText(this, 'Ito ata yung unang alis natin kasama side ko, jusko! kung maka hug no? hahaha love na love ka nyan uy!')">
+            <img src="images/kiss.jpg" onclick="showText(this, 'Ay Taray! grabe maka kiss ang koya, well potek ano pa nga ba hahaha, sobrang solid kasi nahalikan kita sa harap ng family natin hahaha')">
+            <img src="images/ring.jpg" onclick="showText(this, 'Taray! pinakasalan ako.... ano ka dyan, away away yan lagi pero nagpakasal')">
+            <img src="images/smile.jpg" onclick="showText(this, 'Hello Baby girl! Nene days eh hahaha, pero wag ka love ko yan! papakasalan ko pa nga yan eh')">
+            <img src="images/pic2.jpg" onclick="showText(this, 'Napasama lang talaga to eh, pero napaisip ako.... ang tagal na natin no? 13 years ng buhay natin magkasama tayo. sana di ka magsawa sa mga pagsubok na haharapin pa natin')">
+            <img src="images/eyes.jpg" onclick="showText(this, 'Wala lang..... sinama ko to kasi i like how you look at me. full of love kahit madami akong kasalanan. Tsaka never ako magsasawa sa titig mo!!!!')">
             <img src="images/Second.jpg" onclick="showText(this, 'Ito yung unang video call natin HAHAHAHA! nene and totoy days. Kitang kita mo naman siguro na sobrang napapangiti mo ako kapag nakikita kita. always remember na simula una palang ikaw ang dahilan ng ngiti ko')">
+            <img src="images/smile2.jpg" onclick="showText(this, 'Another smile pic to. nakaka adik kasi eh, simula una hanggang sa pagtanda di ako magsasawa sayo')">
+            <img src="images/someday.jpg" onclick="showText(this, 'Ito talaga! susunod na to, ang ating sariling business. Looking forward sa mga maaabot natin')">
+            <img src="images/wacky.jpg" onclick="showText(this, 'If we can turn back time, i just want to make it right always, but you will always be my woman')">
         </div>
 
         <div id="text"></div>
@@ -124,6 +139,7 @@
 
 </body>
 </html>
+
 
 
 
