--- a/index.html
+++ b/index.html
@@ -2,22 +2,35 @@
 <html>
 <head>
     <title>Lance's Personal Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             margin: 0;
-            font-family: Arial;
-            background: #f4f4f4;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 50%, #fbc2eb 100%);
             height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             overflow: hidden;
+        }
+
+        /* Header */
+        header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            text-align: center;
+            padding: 20px;
+            font-size: 48px;
+            font-weight: bold;
+            color: #fff;
+            text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+            z-index: 10;
         }
 
         .container {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             gap: 60px;
+            padding-top: 120px; /* space for header */
             transition: all 0.7s cubic-bezier(0.25, 1, 0.5, 1);
         }
 
@@ -33,23 +46,24 @@
             border-radius: 12px;
             cursor: pointer;
             transition: all 0.5s ease;
+            box-shadow: 0 8px 15px rgba(0,0,0,0.2);
         }
 
-        /* Hover effect */
         img:hover {
             transform: scale(1.05);
         }
 
-        /* TEXT */
+        /* Text */
         #text {
-            width: 320px;
-            font-size: 22px;
+            width: 350px;
+            font-size: 20px;
+            color: #fff;
             opacity: 0;
             transition: opacity 0.6s ease;
+            text-shadow: 1px 1px 6px rgba(0,0,0,0.5);
         }
 
-        /* ACTIVE STATE */
-
+        /* Active state */
         .active .images {
             transform: translateX(-180px);
         }
@@ -70,9 +84,30 @@
             opacity: 0.6;
         }
 
+        /* Responsive */
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+                align-items: center;
+                padding-top: 80px;
+            }
+
+            #text {
+                width: 90%;
+                text-align: center;
+                margin-top: 20px;
+            }
+
+            .active .images {
+                transform: translateX(0);
+            }
+        }
     </style>
 </head>
 <body>
+
+    <!-- Header -->
+    <header>HAPPY BIRTHDAY LOVE 🎉❤️</header>
 
     <div class="container" id="container">
         <div class="images">
@@ -110,27 +145,20 @@
             if (currentImage === image) {
                 container.classList.remove("active");
                 textDiv.innerHTML = "";
-
                 images.forEach(img => {
                     img.classList.remove("selected");
                     img.classList.remove("blur");
                 });
-
                 currentImage = null;
             } 
             else {
                 textDiv.innerHTML = message;
                 container.classList.add("active");
-
                 images.forEach(img => {
                     img.classList.remove("selected");
                     img.classList.remove("blur");
-
-                    if (img !== image) {
-                        img.classList.add("blur");
-                    }
+                    if (img !== image) img.classList.add("blur");
                 });
-
                 image.classList.add("selected");
                 currentImage = image;
             }
@@ -139,11 +167,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
